# BitStarter

./: .gitignore  Cargo.toml  README.md  contract_updates.md  instructions.md
.github/workflows/: ci.yml
apps/web/: .env.example  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/campaigns/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/components/ui/: StatusBadge.tsx
apps/web/features/campaigns/: CampaignActions.tsx  CampaignCard.tsx  CreateCampaignForm.tsx  demoData.ts  types.ts
apps/web/features/realtime/: ActivityFeed.tsx  eventParser.ts  eventTypes.ts  useCampaignEvents.ts
apps/web/features/wallet/: WalletStatus.tsx
apps/web/scripts/: patch-base32.js
apps/web/tests/: CampaignActions.test.tsx  CampaignCard.test.tsx  CreateCampaignForm.test.tsx
contracts/campaign_factory/: Cargo.toml
contracts/campaign_factory/src/: lib.rs  test.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/investment_campaign/: Cargo.toml
contracts/investment_campaign/src/: lib.rs  test.rs
contracts/preorder_campaign/: Cargo.toml
contracts/preorder_campaign/src/: lib.rs  test.rs
contracts/refund_manager/: Cargo.toml
contracts/refund_manager/src/: lib.rs  test.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: errors.rs  events.rs  lib.rs  types.rs
docs/: architecture.md  demo-flow.md  deployment.md
scripts/deploy/: deploy-contracts.ts  deploy-testnet.sh
scripts/generate-bindings/: README.md
scripts/seed-demo-data/: README.md
(+10 files in other folders)
