[package]
name = "refund-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
bitstarter-shared.workspace = true
preorder-campaign = { path = "../preorder_campaign" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
